[package]
name = "bevy_simon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.1"
rand = "0.8.5"
strum = "0.26.2"
strum_macros = "0.26.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.92"
web-sys = {version="0.3.69", features=["Storage", "Window"]}
